--- a/ClassLibrary5/ClassLibrary5.csproj
+++ b/ClassLibrary5/ClassLibrary5.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.Windows.SDK.Contracts" Version="10.0.18362.2005" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ClassLibrary1\ClassLibrary1.csproj" />
+  </ItemGroup>
+
 </Project>
